--- a/.coveragerc
+++ b/.coveragerc
@@ -3,6 +3,8 @@ omit =
     */python?.?/*
     */site-packages/nose/*
     */__pycache__/*
+    */__init__.py/*
+    
     *.pyc
     */venv/*
     */home/travis/virtualenv/*
