--- a/.coveragerc
+++ b/.coveragerc
@@ -3,8 +3,8 @@ omit =
     */python?.?/*
     */site-packages/nose/*
     */__pycache__/*
-    */__init__.py/*
-    
+    */__init__.py*
+    */db.py
     *.pyc
     */venv/*
     */home/travis/virtualenv/*
